2011-04-19	Oren Ben-Kiki <github-oren@ben-kiki.org>

	* Refactor together with Codnar-0.1.62.

2011-04-17	Oren Ben-Kiki <github-oren@ben-kiki.org>

	* Fix gem installation problem.
	* Exclude tests from RDoc documentation.
	* Fix commit process.
	* Refactor out of Codnar.

2011-04-14	Oren Ben-Kiki <github-oren@ben-kiki.org>

	* Initial empty repository
