@@ -1,9 +1,8 @@
-require "fileutils"
 require "olag/test/with_errors"
 require "olag/test/with_fakefs"
 require "olag/test/with_rake"
 require "olag/test/with_tempfile"
 
-# Enhance the global test module with additional classes.
+# Enhance the global test module with additional mix-in modules.
 module Test
 end
