@@ -3,9 +3,10 @@ module Olag
   module Version
 
     # Update the file containing the gem's version. The file is expected to
-    # contain a line in the format: +return+ "+major+.+minor+.+commits+".
-    # The third number is updated according to the number of Git commits. This
-    # works well as long as we are working in the master branch.
+    # contain a line in the format: <tt>VERSION =
+    # "_major_._minor_._commits_"</tt>. The third number is updated according
+    # to the number of Git commits. This works well as long as we are working
+    # in the master branch.
     def self.update(path)
       current_file_contents, current_version, correct_version = current_status(path)
       if current_version != correct_version
@@ -31,7 +32,7 @@ module Olag
     # an array of two strings - the prefix containing the major and minor
     # numbers, and the suffix containing the commits number.
     def self.extract_version(path, file_contents)
-      abort("#{path}: Does not contain a valid VERSION line.") unless file_contents =~ /return ["'](\d+\.\d+\.)(\d+)["']/
+      abort("#{path}: Does not contain a valid VERSION line.") unless file_contents =~ /VERSION\s+=\s+["'](\d+\.\d+\.)(\d+)["']/
       return [ $1, $2 ]
     end
 
