@@ -2,9 +2,7 @@
 module Olag
 
   # This version number. The third number is automatically updated to track the
-  # number of Git commits by running +rake+ +version+.
-  def self.version
-    return "0.1.6"
-  end
+  # number of Git commits by running <tt>rake version</tt>.
+  VERSION = "0.1.7"
 
 end
