@@ -1,6 +1,10 @@
+2011-04-22	Oren Ben-Kiki <github-oren@ben-kiki.org>
+
+	* Fix version handling and other issues.
+
 2011-04-19	Oren Ben-Kiki <github-oren@ben-kiki.org>
 
-	* Refactor together with Codnar-0.1.62.
+	* Refactor together with Codnar-0-1-62.
 
 2011-04-17	Oren Ben-Kiki <github-oren@ben-kiki.org>
 
